--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <img class="logo" src="/imagenes/alura-oracle.logo.png" alt="logo de alura">
+        <img class="logo" src="./imagenes/alura-oracle.logo.png" alt="logo de alura">
     </header>
 
     <main>
